--- a/src/design/__utilities.scss
+++ b/src/design/__utilities.scss
@@ -3,11 +3,36 @@
 /* ------------------- */
 
 /* general */
+/* flex */
 .flex {
   display: flex;
   gap: var(--gap, 1rem);
 }
-
+.flex-row {
+  flex-direction: row;
+}
+.flex-column {
+  flex-direction: column;
+}
+.justify-content-start {
+  justify-content: flex-start;
+}
+.justify-content-end {
+  justify-content: flex-end;
+}
+.justify-content-center {
+  justify-content: center;
+}
+.justify-content-between {
+  justify-content: space-between;
+}
+.align-items-center {
+  align-items: center;
+}
+.align-self-center {
+  align-self: center;
+}
+/** grid */
 .grid {
   display: grid;
   gap: var(--gap, 1rem);
