--- a/src/partials/header.handlebars
+++ b/src/partials/header.handlebars
@@ -1,16 +1,14 @@
-<header>
-    <h1 class="logo">Awesome Service</h1>
-    <nav class="navigation">
-        <ul>
-            <li>
-                <a href="/">Home</a>
-            </li>
-            <li>
-                <a href="/">About</a>
-            </li>
-            <li>
-                <a href="/">Contact</a>
-            </li>
-        </ul>
-    </nav>
+<header class="landing__header flex container justify-content-between ">
+  <div class="landing__logo">
+    <h1>Dev Pl</h1>
+  </div>
+  <nav class="landing__nav">
+    <ul class="flex">
+      <li><a href="#init">Início</a></li>
+      <li><a href="#about">Sobre mim</a></li>
+      <li><a href="#projects">Meus projetos</a></li>
+      <li><a href="#degree">Formação</a></li>
+      <li><a href="#experience">Minhas experiências</a></li>
+    </ul>
+  </nav>
 </header>
